gridview 상 데이터 기본 정렬 적용(type, aasId 순)

--- a/src/AasxPackageExplorerV2/AasxPackageExplorer/AasListView.xaml
+++ b/src/AasxPackageExplorerV2/AasxPackageExplorer/AasListView.xaml
@@ -19,7 +19,7 @@
         <ListView Grid.Row="0" x:Name="aasList">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="AAS" >
+                    <GridViewColumn Header="AAS" Width="Auto">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal">
